fix problem yes (kinda)
image stretched but it's fine

--- a/styles.css
+++ b/styles.css
@@ -269,8 +269,8 @@ h1{
 }
 
 .troop-img-box{
-    width: 120px;
-    height: 120px;
+    width: 100px;
+    height: 100px;
     padding-left: 2%;
     padding-top: 1%;
     padding-right: 2%;
@@ -293,6 +293,7 @@ h1{
 .troop-img{
     width: auto;
     height: 100%;
+    max-width: 100px;
 }
   
 .top-box{
@@ -440,7 +441,6 @@ h1{
     background-color: #423c3c;
     height: 10vh;
 }
-
 
 
 
